# NodeAI

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  tasks.md
.cursor/rules/: nodeai-architecture.mdc  nodeai-git-commit.mdc  nodeai-local-dev.mdc  nodeai-no-hardcoding.mdc  nodeai-product.mdc  nodeai-prototype.mdc  nodeai-tasks.mdc  nodeai-ui-copy.mdc  nodeai-ui-runtime-data.mdc
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  TrayHudApp.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cloud_dev.rs  lib.rs  main.rs  tray.rs
apps/desktop/src/components/: AddAppModal.tsx  AgentWriteConfirm.tsx  BrandMark.tsx  CatalogError.tsx  CatalogLoading.tsx  CelebrateModal.tsx  ChatMarkdown.tsx  LocalModePrompt.tsx  LoginPrompt.tsx  Menubar.tsx  ModelCatalogModal.tsx  Sidebar.tsx  SourceModal.tsx  Toast.tsx  TrayHudPanel.tsx
apps/desktop/src/components/chat/: ChatCodeBlock.tsx
apps/desktop/src/components/ui/: CopyButton.tsx  Modal.tsx  PageScroll.tsx  Switch.tsx
apps/desktop/src/data/: chatStarters.ts  demo.ts
apps/desktop/src/i18n/: en.json  index.ts  zh.json
apps/desktop/src/lib/: bonusApi.ts  budgetAlert.ts  catalog.ts  chat.ts  cloudAuth.ts  cloudDev.ts  cloudSession.test.ts  cloudSession.ts  format.ts  hybridFallback.ts  memoryStore.ts  platform.ts  route.ts  sourceKeys.ts  sourcesSync.ts  streamText.test.ts  streamText.ts  traySync.ts  userPrefs.ts
apps/desktop/src/lib/apps/: live.ts
apps/desktop/src/lib/catalog/: featured.ts  flagship.test.ts  flagship.ts  index.ts  sections.ts  storage.ts  ui.ts
apps/desktop/src/lib/chat/: agentInvoke.ts  agentLoop.ts  api.ts  attachments.ts  chat.test.ts  contextPref.ts  contextStrip.ts  index.ts  sessions.ts  sse.ts  toolCalls.ts  tools.ts
apps/desktop/src/lib/gateway/: api.ts  index.ts  normalize.ts  types.ts
apps/desktop/src/lib/markdown/: rehypeHighlight.ts
apps/desktop/src/lib/model/: demo.ts  index.ts  pool.ts  pricing.ts  types.ts  virtual.ts
apps/desktop/src/lib/product/: apps.ts  bonusCards.ts  intents.ts  plans.ts
apps/desktop/src/lib/route/: display.ts
apps/desktop/src/lib/usage/: billing.ts
apps/desktop/src/state/: AppContext.tsx  ChatContext.tsx
apps/desktop/src/styles/: app.css  hljs-chat.css  login-prompt.css  prototype.css  tokens.css
apps/desktop/src/views/: AuthView.tsx  BillingView.tsx  ChatView.layout.test.tsx  ChatView.tsx  GatewayView.tsx  HubView.tsx  MemoryView.tsx  ModelsView.tsx  PlanView.tsx  SettingsView.tsx  SourcesView.tsx
crates/nodeai-cloud/: Cargo.toml
crates/nodeai-cloud/src/: auth.rs  lib.rs
crates/nodeai-core/: Cargo.toml
crates/nodeai-core/src/: bonus.rs  cloud.rs  config.rs  env.rs  intent.rs  lib.rs  models.rs  sources.rs  virtual_models.rs
crates/nodeai-proxy/: Cargo.toml
crates/nodeai-proxy/src/: auth.rs  byok.rs  cloud.rs  gateway.rs  lib.rs  memory.rs  pipeline.rs  prune.rs  routes.rs  smart_route.rs  store.rs  usage.rs  usage_capture.rs
crates/nodeai-proxy/tests/: gateway_local.rs
crates/nodeai-runtime/: Cargo.toml
crates/nodeai-runtime/src/: agent.rs  format.rs  lib.rs
docs/: CONTINUATION.md  PRD.md  TESTING.md
docs/superpowers/plans/: 2026-06-01-nodeai-mvp-implementation.md
prototypes/: auth.html  dashboard.html  logo-options.html
scripts/: dev.sh  ensure_cloud.sh  stage_cloud_sidecar.sh  test_agent.sh  test_byok.sh  test_integration.sh  test_local.sh  test_prune.sh
