[package]
name = "nodeai-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NodeAI Cloud API — model registry, hosted quota relay (Gateway key server-side only)"

[[bin]]
name = "nodeai-cloud-dev"
path = "src/bin/dev_server.rs"

[dependencies]
nodeai-core = { path = "../nodeai-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
thiserror = { workspace = true }
