[package]
name = "nodeai-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nodeai-core = { path = "../nodeai-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
