[package]
name = "nodeai-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nodeai-proxy-standalone"
path = "src/bin/standalone.rs"

[dependencies]
nodeai-core = { path = "../nodeai-core" }
nodeai-cloud = { path = "../nodeai-cloud" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
keyring = "3"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
