[package]
name = "nodeai-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BYOK runtime — format conversion and agent tool chain"

[dependencies]
nodeai-core = { path = "../nodeai-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
