[package]
name = "nodeai-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NodeAI desktop — AI usage hub"
authors = ["NodeAI"]

[lib]
name = "nodeai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nodeai-core = { path = "../../../crates/nodeai-core" }
nodeai-proxy = { path = "../../../crates/nodeai-proxy" }
nodeai-runtime = { path = "../../../crates/nodeai-runtime" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
keyring = "3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
